# twitter_clone

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tweets/: forms.py  models.py  settings.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_alter_tweet_content_follow_like_retweet.py
tweets/templates/: base.html  create_tweet.html  home.html
tweets/templates/account/: login.html  signup.html
tweets/templates/tweets/: create_tweet.html  feed.html  followers_list.html  home.html  tweet_detail.html  user_profile.html
twitter_clone/: settings.py  urls.py
twitter_clone/static/: styles.css
