[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = "\"clone twitter\""
authors = ["Manoel, <manoeljailton79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
django = "^5.0.6"
gitpython = "^3.1.43"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
